# ChangeLog for net-misc/soledad-server
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  soledad-server-0.6.0.ebuild:
  Correct spelling error in description.

*soledad-server-0.6.0 (02 Dec 2014)

  02 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  +soledad-server-0.6.0.ebuild, +metadata.xml:
  Add soledad-server-0.6.0 and metadata.xml
